force-app/main/default/objects/KimbleOne__ResourceHistory__c/KimbleOne__ResourceHistory__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Resource History</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Resource History Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>