force-app/main/default/objects/KimbleOne__ResourceHistory__c/fields/KimbleOne__ActivityRole__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ActivityRole__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Role</label>
    <referenceTo>KimbleOne__ActivityRole__c</referenceTo>
    <relationshipLabel>Resource History</relationshipLabel>
    <relationshipName>ResourceHistory</relationshipName>
    <type>Lookup</type>
</CustomField>