force-app/main/default/objects/KimbleOne__ResourceHistory__c/fields/KimbleOne__BusinessUnitSecondary__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__BusinessUnitSecondary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Unit (Secondary)</label>
    <referenceTo>KimbleOne__BusinessUnit__c</referenceTo>
    <relationshipLabel>Resource History (Business Unit (Secondary))</relationshipLabel>
    <relationshipName>ResourceHistorySecondary</relationshipName>
    <type>Lookup</type>
</CustomField>