force-app/main/default/objects/KimbleOne__ResourceHistory__c/fields/KimbleOne__Grade__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Grade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grade</label>
    <referenceTo>KimbleOne__Grade__c</referenceTo>
    <relationshipLabel>Resource History</relationshipLabel>
    <relationshipName>ResourceHistory</relationshipName>
    <type>Lookup</type>
</CustomField>