force-app/main/default/objects/KimbleOne__ResourceHistory__c/fields/KimbleOne__Resource__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Resource__c</fullName>
    <label>Resource</label>
    <referenceTo>KimbleOne__Resource__c</referenceTo>
    <relationshipLabel>Resource History</relationshipLabel>
    <relationshipName>ResourceHistory</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>